# escapes

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  security.yml
packaging/: install.sh
packaging/linux/: nfpm.yaml  postinst.sh  prerm.sh
packaging/macos/: distribution.xml  uninstall.sh
packaging/macos/scripts/: postinstall
skill/: SKILL.md
skills/openape-escapes/: SKILL.md
skills/openape-sudo/: SKILL.md
src/: audit.rs  auth.rs  cli.rs  config.rs  crypto.rs  enroll.rs  error.rs  exec.rs  grant_mode.rs  grants.rs  jwt.rs  main.rs  remove.rs  trust.rs  update.rs
