[package]
name = "openape-escapes"
version = "0.3.0"
edition = "2021"
description = "Privilege elevation via OpenApe grant system"
license = "AGPL-3.0-or-later"

[[bin]]
name = "escapes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
nix = { version = "0.29", features = ["user", "process", "signal"] }
thiserror = "2"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/escapes-v{ version }-{ target }.tar.gz"
bin-dir = "escapes"
pkg-fmt = "tgz"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
